# cpp_template

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  basics_8hpp_source.html  cpp__template_8hpp_source.html  dir_1c3a59615ddebb5fbf04127ce013cb9e.html  dir_55fe1ef08c20318a1ffd5d7eb64cfd23.html  dir_b699708f956c6ef7b13ed772f33e83cc.html  dir_b95ca16d19ff66fd4462d32c497fab47.html  files.html  index.html  namespacecpp__template.html  namespaces.html
.github/workflows/: blank.yml
.github/workflows/workflows/: blank.yml
cmake/: config.cmake.in
docs/: CMakeLists.txt  Doxyfile.in
include/ml/cpp_template/: cpp_template.hpp
include/ml/details/cpp_template/: basics.hpp
search/: all_0.js  namespaces_0.js  searchdata.js
tests/: CMakeLists.txt  tests.cpp
