find_package(Doxygen REQUIRED)
set(DOXYGEN_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
set(DOXYGEN_INDEX_FILE ${DOXYGEN_OUTPUT_DIRECTORY}/html/index.html)
set(DOXYFILE_IN ${CMAKE_CURRENT_LIST_DIR}/Doxyfile.in)
set(DOXYFILE_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)

configure_file(${DOXYFILE_IN} ${DOXYFILE_OUT} @ONLY)
message("Doxygen build started")

file(MAKE_DIRECTORY ${DOXYGEN_OUTPUT_DIRECTORY})
add_custom_target(docs ALL
  VERBATIM
  COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYFILE_OUT}
  COMMAND ${CMAKE_COMMAND} -E copy_directory ${DOXYGEN_OUTPUT_DIRECTORY}/html ${CMAKE_CURRENT_LIST_DIR}/html
  COMMENT "Generate documentation")
